<resources>
    <string name="app_name">Plan Your Lift</string>
    <string name="launchtitle">Plan Your Lift</string>
    <string name="logingoogle">LogIn with google</string>
    <string name="register">Register</string>
    <string name="it_worked">It worked!</string>
    <string name="loginfacebook">Login with Facebook</string>
    <string name="launchlog">Login with Email</string>
    <string name="email">This Will be the Email log in page</string>
    <string name="facebook">This Will be the Facebook log in page</string>
    <string name="google">This Will be the Google log in page</string>
    <string name="launchreg">Register</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="back1">Back</string>
    <string name="back2">Back</string>
    <string name="back3">Back</string>
    <string name="regtitle">Register</string>
    <string name="regpassword">Password</string>
    <string name="regemail">Email</string>
    <string name="regbutton">Register</string>
    <string name="launchsubtitle">Login or Register</string>
    <string name="loginemail">Email</string>
    <string name="loginpassword">Password</string>
    <string name="logintitle">Login</string>
    <string name="loginbutton">Login</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="current_workout">Current Workout</string>
    <string name="profile">Profile</string>
    <string name="create_workout">Create Workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regname">Name</string>
    <string name="launcglogoutbutton">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="edit_your_workouts">Edit your workouts</string>
    <string name="exercisename">exercisename</string>
    <string name="sets">sets</string>
    <string name="reps">reps</string>
    <string name="edit">Edit</string>
    <string name="units">units</string>
    <string name="delete">Delete</string>
    <string name="exercise_name">Exercise name</string>
    <string name="saved_workouts">Saved Workouts</string>
    <string name="forgot_your_password_reset_it_here">Forgot your password? Reset it here!</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here!</string>
    <string name="previous_workouts">Previous Workouts</string>
    <string-array name="timer_array">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
    </string-array>

</resources>