<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333138">

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/logintitle"
        android:textColor="#FF312E"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />


    <EditText
        android:id="@+id/loginemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/loginemail"
        android:inputType="text|textEmailAddress"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintitle"
        app:layout_constraintVertical_bias="0.24000001" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/loginpassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/resetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_your_password_reset_it_here"
        android:textSize="16sp"
        android:textColor="#FF312E"
        app:layout_constraintBottom_toTopOf="@+id/loginbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/loginbutton"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="#FF312E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_here"
        android:textSize="20sp"
        android:clickable="true"
        android:textColor="#FF312E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>