<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launchscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333138">

    <TextView
        android:id="@+id/launchtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/launchtitle"
        android:textColor="#FF312E"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998"
        tools:text="Plan Your Lift" />


    <Button
        android:id="@+id/launchregbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="Register"
        android:text="@string/launchreg"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="#FF312E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchtitle"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/launchlogbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="LoginEmail"
        android:text="@string/launchlog"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="#FF312E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchregbutton"
        app:layout_constraintVertical_bias="0.057"
        tools:text="Login" />

    <TextView
        android:id="@+id/launchsubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/launchsubtitle"
        android:textColor="#FF312E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchtitle" />

    <Button
        android:id="@+id/LoginGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Google Login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="#FF312E"
        app:layout_constraintBottom_toTopOf="@+id/launchlogbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchregbutton"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>