<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/regscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333138">

    <TextView
        android:id="@+id/regtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/regtitle"
        android:textColor="#FF312E"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />


    <EditText
        android:id="@+id/regname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/regname"
        android:inputType="textShortMessage|textPersonName|text"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regtitle"
        app:layout_constraintVertical_bias="0.19"
       />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/regemail"
        android:inputType="text|textEmailAddress"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regtitle"
        app:layout_constraintVertical_bias="0.39"
        />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/regpassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFAFA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regtitle"
        app:layout_constraintVertical_bias="0.58000004"
        />

    <TextView
        android:id="@+id/policy"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#FF312E"
        android:textColorLink="#FF312E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regpassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/launchregbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/regbutton"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="#FF312E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regpassword"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/haveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="Have an account? Login here!"
        android:textSize="20sp"
        android:textColor="#FF312E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchregbutton"
        app:layout_constraintVertical_bias="0.24" />

</androidx.constraintlayout.widget.ConstraintLayout>